# datamodel

./: .gitignore  .travis.yml  PFSB.md  README.md  SConstruct  datamodel.txt  pyproject.toml  setup.cfg  setup.py  travis.sh  versions.txt
1DDRP_DM/: 1DDRP_DM_conceptual_proposal_1.txt
datamodel/: datamodel.txt
datamodel/notebooks/: datamodel.ipynb
examples/: README  pfsArm-000001-1b.fits  pfsArm-000001-1m.fits  pfsArm-000001-1n.fits  pfsArm-000001-1r.fits  pfsArm-000001-b1.fits  pfsArm-000001-m1.fits  pfsArm-000001-n1.fits  pfsArm-000001-r1.fits  pfsConfig-0x52327a27.fits  pfsConfig-0x788daff233347923.fits  pfsObject-00000-0,0-000-00000001-01-0x395428ab.fits  pfsObject-00000-0,0-000-00000001-01-0xc28d46e6395428ab.fits
notebooks/: datamodel.ipynb
python/pfs/datamodel/: __init__.py  drp.py  fluxTable.py  ga.py  guideStars.py  identity.py  interpolate.py  makePfsObject.py  masks.py  notes.py  objectGroupMap.py  observations.py  pfiConfig.py  pfiDesign.py  pfsArm.py  pfsCoZCandidates.py  pfsConfig.py  pfsDetectorMap.py  pfsFiberArray.py  pfsFiberNorms.py  (+17 more)
tests/: SConscript  test_FileFormats.py  test_FluxTable.py  test_GuideStars.py  test_ObjectGroupMap.py  test_PfsConfig.py  test_PfsFiberArraySet.py  test_PfsFiberNorms.py  test_PfsFluxReference.py  test_PfsGACatalog.py  test_PfsGAObject.py  test_PfsStar.py  test_PfsStarCatalog.py  test_PfsTargetSpectra.py  test_WavelengthArray.py  test_combineArms.py  test_createHash.py  test_docstrings.py  test_enum.py  test_notes.py  test_pfsDesignId.py  test_pfsGAObject.py
ups/: datamodel.cfg  datamodel.table  eupspkg.cfg.sh
(+4 files in other folders)
